--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ flutter_embedding_profile = "1.0.0-f6344b75dcf861d8bf1f1322780b8811f982e31a"
 flutter_embedding_release = "1.0.0-f6344b75dcf861d8bf1f1322780b8811f982e31a"
 junitJupiter = "5.10.2"
 legacySupportV13 = "1.0.0"
+openpgpApi = "v5.7.1"
 orientdbCore = "3.2.30"
 workRuntime = "2.9.0"
 agp = "8.4"
@@ -24,6 +25,7 @@ flutter_embedding_release = { module = "io.flutter:flutter_embedding_release", v
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junitJupiter" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 legacy-support-v13 = { group = "androidx.legacy", name = "legacy-support-v13", version.ref = "legacySupportV13" }
+openpgp-api = { module = "com.github.open-keychain.open-keychain:openpgp-api", version.ref = "openpgpApi" }
 orientdb-core = { module = "com.orientechnologies:orientdb-core", version.ref = "orientdbCore" }
 work-runtime = { group = "androidx.work", name = "work-runtime", version.ref = "workRuntime" }
 x86_64_debug = { module = "io.flutter:x86_64_debug", version.ref = "flutter_embedding_debug" }
